fix card overflow bug

--- a/src/components/pokemon-card/pokemon-card.styles.scss
+++ b/src/components/pokemon-card/pokemon-card.styles.scss
@@ -22,6 +22,7 @@
   padding: 2px;
   height: 98%;
   position: relative;
+  overflow: hidden;
 
   h3 {
     max-width: 200px;
